<resources>
    <string name="app_name">MusicMixer</string>
    <string name="setting_permission_record_audio">This app need permission to record audio.Please grant the permission in settings.</string>
    <string name="audio">Audio</string>
    <string name="video">Video</string>
    <string name="setting_permission_audio">This app need permission to show list audio file.Please grant the permission in settings.</string>
    <string name="main_activity_label">Ringdroid</string>

    <string name="search_edit_box">Search</string>

    <string name="button_start_record_activity">Record New</string>

    <string name="sdcard_readonly">Sorry, the SD Card is mounted as read-only and Ringdroid requires it to be writable.</string>
    <string name="no_sdcard">Sorry, Ringdroid can\'t run unless you have an SD Card inserted.</string>
    <string name="sdcard_shared">Sorry, Ringdroid can\'t run while your handset is mounted as a USB device.</string>

    <string name="button_options">Options</string>

    <!--
     Edit activity
     -->

    <!-- Labels next to the start and end time edit boxes -->
    <string name="start_label">Start:</string>
    <string name="end_label">End:</string>

    <string name="edit_intent">Edit</string>

    <string name="time_seconds">seconds</string>

    <!-- After you save a notification or ringtone and have more options
         for what to do with them -->
    <string name="what_to_do_with_ringtone">Saved!  Make this your default ringtone or assign it to a contact?</string>
    <string name="set_default_notification">Saved!  Make this your default notification?</string>

    <string name="make_default_ringtone_button">Make Default</string>
    <string name="choose_contact_ringtone_button">Assign to Contact</string>
    <string name="do_nothing_with_ringtone_button">Close</string>

    <!-- Progress dialog text for loading, recording, or saving... -->
    <string name="progress_dialog_loading">Loading…</string>
    <string name="progress_dialog_recording">Recording…</string>
    <string name="progress_dialog_saving">Saving…</string>
    <string name="progress_dialog_cancel">Cancel</string>
    <string name="progress_dialog_stop">Stop</string>

    <!-- Image button descriptions for accessibility -->

    <string name="start_marker">Start marker</string>
    <string name="end_marker">End marker</string>
    <string name="rewind">Rewind</string>
    <string name="play">Play</string>
    <string name="stop">Stop</string>
    <string name="ffwd">Fast forward</string>
    <string name="zoom_in">Zoom In</string>
    <string name="zoom_out">Zoom Out</string>
    <string name="save_button">Save</string>

    <!--
     Menu items
     -->

    <string name="menu_save">Save</string>
    <string name="menu_reset">Reset</string>
    <string name="menu_about">About</string>
    <string name="menu_show_all_audio">Show All Audio</string>

    <!--
     Context menu items
     -->

    <string name="context_menu_edit">Edit</string>
    <string name="context_menu_delete">Delete</string>
    <string name="context_menu_default_ringtone">Set as Default Ringtone</string>
    <string name="context_menu_contact">Assign to Contact</string>
    <string name="context_menu_default_notification">Set as Default Notification</string>

    <!--
     File Save dialog
     -->

    <string name="file_save_title">Save As:</string>
    <string name="file_save_button_save">Save</string>
    <string name="file_save_button_cancel">Cancel</string>

    <string name="ringtone_type_label">Type:</string>

    <string name="type_music">Music</string>
    <string name="type_alarm">Alarm</string>
    <string name="type_notification">Notification</string>
    <string name="type_ringtone">Ringtone</string>
    <string name="type_audio">Audio</string>

    <string name="ringtone_name_label">Name:</string>

    <string name="artist_name">Ringdroid</string>

    <!--
     Delete confirmation dialog
     -->

    <string name="delete_ringtone">Delete Ringtone</string>
    <string name="delete_alarm">Delete Alarm</string>
    <string name="delete_notification">Delete Notification</string>
    <string name="delete_music">Delete Music</string>
    <string name="delete_audio">Delete Audio</string>

    <string name="confirm_delete_ringdroid">Are you sure?</string>
    <string name="confirm_delete_non_ringdroid">Are you sure?  This file was not created using Ringdroid!</string>

    <string name="delete_ok_button">Delete</string>
    <string name="delete_cancel_button">Cancel</string>

    <string name="delete_failed">Unable to delete file</string>

    <!--
     Success and error messages
     -->

    <string name="alert_title_success">Success</string>
    <string name="alert_title_failure">Error</string>
    <string name="alert_ok_button">OK</string>
    <string name="alert_yes_button">Yes, please!</string>
    <string name="alert_no_button">No, thanks.</string>

    <string name="save_success_message">Saved!</string>
    <string name="default_ringtone_success_message">Changed default ringtone</string>
    <string name="default_notification_success_message">Changed default notification sound</string>
    <string name="play_error">Unable to play this media file</string>
    <string name="no_unique_filename">Unable to find unique filename</string>
    <string name="record_error">Error recording audio</string>
    <string name="too_small_error">Can\'t save a file that small, try making it longer.</string>
    <string name="write_error">Error writing file</string>
    <string name="read_error">Error reading file</string>

    <string name="no_space_error">Your SD card is full, there is not enough space to save this file.</string>

    <string name="bad_extension_error">Sorry, Ringdroid is not yet able to edit files of type</string>
    <string name="no_extension_error">Sorry, Ringdroid can\'t edit a file if it doesn\'t have an extension like .mp3 or .wav</string>

    <!--
     Choose Contact Activity
     -->

    <string name="choose_contact_title">Assign ringtone to which contact?</string>
    <string name="success_contact_ringtone">Successfully assigned ringtone to:</string>

    <!--
     About
     -->

    <string name="about_title">About Ringdroid</string>
    <string name="about_text"><![CDATA[Use Ringdroid to edit MP3, OGG, WAV, AAC, and AMR audio files and create ringtones, alarms, and notifications from them.\n\nTip: copy audio files to your SD card using a USB cable.\n\nTip: tap anywhere on the waveform to start playing at that position.\n\nTip: while playing, tap the word Start or End to quickly set the start and end markers to the current playback time.]]></string>
    <string name="music">music</string>
    <string name="sample">SAMPLER</string>
    <string name="cues">CUES</string>
    <string name="loop">LOOP</string>
    <string name="bass">BASS</string>
    <string name="eq">EQ</string>
    <string name="dj_music_mixer">DJ Music Mixer</string>
    <string name="ringtone_cutter">Ringtone cutter</string>
    <string name="audio_mixer">Audio Mixer</string>
    <string name="merge_audio">Merge audio</string>
    <string name="auto_mix">Auto mix</string>
    <string name="store">Store</string>
    <string name="_00">.00</string>
    <string name="mo">/mo</string>
    <string name="_8">8</string>
    <string name="dola">$</string>
    <string name="set">SET</string>
    <string name="reset">RESET</string>
    <string name="loop_8">Loop:8</string>
    <string name="in_loop">IN 00:00</string>
    <string name="out_loop">OUT 00:00</string>
    <string name="hot_cues">HOT CUES</string>
    <string name="delete">DELETE</string>
    <string name="top_dj_fx">TOP DJ FX</string>
    <string name="downlifter">Downlifter</string>
    <string name="horn">Horn</string>
    <string name="crash">Crash</string>
    <string name="siren">Siren</string>
    <string name="uplifter">Uplifter</string>
    <string name="air_alarm">Air Alarm</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="shortest_sound">Shortest sound</string>
    <string name="longest_sound">Longest sound</string>
    <string name="volume">Volume</string>
    <string name="properties">Properties</string>
    <string name="library">Library</string>
    <string name="add_music_to_disc_a">Add music to disc A</string>
    <string name="add_music_to_disc_b">Add music to disc B</string>
    <string name="pitch">PITCH</string>
    <string name="rec">REC</string>
    <string name="vol">VOL</string>
    <string name="house">HOUSE</string>
    <string name="edm_vocals">EDM VOCALS</string>
    <string name="electro_vol_1">ELECTRO VOL.1</string>
    <string name="electro_vol_2">ELECTRO VOL.2</string>
    <string name="_00_00">00:00</string>
    <string name="sync">SYNC</string>
    <string name="saved">Saved</string>
    <string name="add_to_queue">Add to queue</string>
    <string name="add_to_playlist">Add to playlist</string>
    <string name="preview">Preview</string>

</resources>