<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/bg_bottom_radius_top_20"
    android:paddingVertical="40dp"
    android:paddingHorizontal="70dp"
    >
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_marginEnd="60dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:id="@+id/cst_dj"

        >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cstDJMusic"
        android:layout_width="300dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/ln_store"
        android:background="@drawable/bg_gradient_music_mixer"
        android:layout_marginBottom="10dp"
        >
        <TextView
            android:id="@+id/tvDJ"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dj_music_mixer"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="26dp"
           app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:fontFamily="@font/gothic_a1"
            android:textStyle="bold"
            android:textSize="18sp"
            android:textColor="#D46D34"
            />
        <TextView
            android:id="@+id/paynow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/tvDJ"
            android:layout_marginStart="98dp"
            app:layout_constraintTop_toBottomOf="@id/tvDJ"
            android:layout_marginTop="28dp"
            android:text="PAY NOW"
            android:textColor="@color/white"
            android:background="@drawable/bg_gradient_paynow"
            android:padding="13dp"
            android:fontFamily="@font/gothic_a1"
            android:textSize="18sp"
            android:layout_marginEnd="22dp"
            app:layout_constraintEnd_toEndOf="parent"
            />
        <TextView
            android:id="@+id/text00"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toStartOf="@id/paynow"
            app:layout_constraintTop_toBottomOf="@id/tvDJ"
            app:layout_constraintStart_toEndOf="@id/money_8"
            android:text="@string/_00"
            android:textColor="@color/white"
            android:fontFamily="@font/gothic_a1"
            android:textSize="32sp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="27dp"
            />
        <TextView
            android:id="@+id/text_mo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toStartOf="@id/paynow"
            app:layout_constraintBottom_toBottomOf="@id/paynow"
            android:text="@string/mo"
            android:textColor="#80FFFFFF"
            android:fontFamily="@font/gothic_a1"
            android:textSize="32sp"
            android:layout_marginEnd="21dp"
            app:layout_constraintTop_toBottomOf="@id/text00"
            />
        <TextView
            android:id="@+id/money_8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toStartOf="@id/text_mo"
            app:layout_constraintTop_toBottomOf="@id/tvDJ"
            android:text="@string/_8"
            android:textColor="#FFFFFF"
            android:fontFamily="@font/gothic_a1"
            android:layout_marginTop="10dp"
            android:textSize="64sp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toStartOf="@id/money_8"
            app:layout_constraintBottom_toBottomOf="@id/text00"
            app:layout_constraintTop_toTopOf="@id/text00"
            android:text="@string/dola"
            android:textColor="#FFFFFF"
            android:fontFamily="@font/gothic_a1"
            android:textSize="32sp"
            android:layout_marginEnd="10dp"
            android:textStyle="bold"
            />


        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@+id/tvDJ"
            app:layout_constraintTop_toTopOf="@+id/tvDJ"
            app:layout_constraintBottom_toBottomOf="@id/tvDJ"
            android:src="@drawable/star"
            android:layout_marginStart="2dp"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>
    <LinearLayout
        android:id="@+id/ringtone_cutter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/cstDJMusic"
        app:layout_constraintTop_toTopOf="@id/cstDJMusic"
        android:layout_marginStart="10dp"
        android:orientation="vertical"
        android:background="@drawable/bg_ringtone_cutter"
        android:gravity="center"
        android:paddingHorizontal="20dp"
        android:paddingVertical="14dp"
        >
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/scissor"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/gothic_a1"
            android:text="@string/ringtone_cutter"
            android:textColor="@color/white"
            android:textSize="14sp"

            />

    </LinearLayout>
    <LinearLayout
        android:id="@+id/audio_mixer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/ringtone_cutter"
        app:layout_constraintEnd_toEndOf="@id/ringtone_cutter"
        app:layout_constraintTop_toBottomOf="@id/ringtone_cutter"
        android:background="@drawable/bg_gradient_audio_mixer"
        android:gravity="center"
        android:paddingHorizontal="20dp"
        android:paddingVertical="22dp"
        android:layout_marginTop="14dp"
        >
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/equalizer"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text="@string/audio_mixer"
            android:textSize="14sp"
            android:layout_marginStart="4dp"
            android:fontFamily="@font/gothic_a1"
            />

    </LinearLayout>
    <LinearLayout
        android:id="@+id/merge_audio"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/ringtone_cutter"
        app:layout_constraintEnd_toEndOf="@id/ringtone_cutter"
        app:layout_constraintTop_toBottomOf="@id/audio_mixer"
        android:background="@drawable/bg_gradient_merger_audio"
        android:gravity="center"
        android:paddingHorizontal="17dp"
        android:paddingVertical="22dp"
        android:layout_marginTop="14dp"
        >
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/music_note_2"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text="@string/merge_audio"
            android:layout_marginStart="4dp"
            android:fontFamily="@font/gothic_a1"
            android:textSize="14sp"
            />

    </LinearLayout>
    <LinearLayout
        android:id="@+id/ln_store"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/cstDJMusic"
        app:layout_constraintEnd_toEndOf="@id/cstDJMusic"
        android:weightSum="2"
        app:layout_constraintBottom_toBottomOf="@id/merge_audio"
        >
        <LinearLayout
            android:id="@+id/auto_mix"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/cstDJMusic"
            app:layout_constraintBottom_toBottomOf="@id/merge_audio"
            android:background="@drawable/bg_gradient_store"
            android:gravity="center"
            android:paddingHorizontal="17dp"
            android:paddingVertical="8dp"
            android:layout_weight="1"
            android:layout_marginEnd="5dp"
            >
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/play_padding"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:text="@string/auto_mix"
                android:layout_marginStart="4dp"
                android:fontFamily="@font/gothic_a1"
                android:textSize="14sp"                />

        </LinearLayout>
        <LinearLayout
            android:id="@+id/store"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/cstDJMusic"
            app:layout_constraintBottom_toBottomOf="@id/merge_audio"
            android:background="@drawable/bg_gradient_store"
            android:gravity="center"
            android:paddingHorizontal="17dp"
            android:paddingVertical="8dp"
            android:layout_weight="1"
            android:layout_marginStart="5dp"
            >
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/store"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:text="@string/store"
                android:layout_marginStart="4dp"
                android:fontFamily="@font/gothic_a1"
                android:textSize="14sp"                />

        </LinearLayout>
    </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
    <ImageView
        android:id="@+id/cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/cancel"
        app:layout_constraintTop_toTopOf="@id/cst_dj"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/cst_dj"
        />
    <ImageView
        android:id="@+id/settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/setting"
        app:layout_constraintBottom_toBottomOf="@id/cst_dj"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/cst_dj"
             />
</androidx.constraintlayout.widget.ConstraintLayout>