<?xml version="1.0" encoding="utf-8"?>
<!--
/**
 * Copyright (c) 2007, Google Inc.
 *
 * Licensed under the Apache License, Version 2.0 (the "License"); 
 * you may not use this file except in compliance with the License. 
 * You may obtain a copy of the License at 
 *
 *     http://www.apache.org/licenses/LICENSE-2.0 
 *
 * Unless required by applicable law or agreed to in writing, software 
 * distributed under the License is distributed on an "AS IS" BASIS, 
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. 
 * See the License for the specific language governing permissions and 
 * limitations under the License.
 */
-->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
 android:layout_width="fill_parent"
 android:layout_height="fill_parent"
    android:background="@drawable/background_gradient_color_audiomixer"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cst_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        app:layout_constraintTop_toTopOf="parent">
        <ImageView
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="20dp"
            android:layout_marginStart="16dp"
            android:padding="8dp"
            android:src="@drawable/arrow_smaller"
            app:tint="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/library"
                app:layout_constraintStart_toEndOf="@id/back"
                android:textColor="@color/white"
                android:textFontWeight="700"
                android:textSize="18sp"
                android:textStyle="bold"
                android:padding="8dp"
                />
        <ImageView
            android:id="@+id/menu_dot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:src="@drawable/menu_dot"
            android:padding="8dp"
            android:layout_marginEnd="20dp"
            />
        <ImageView
            android:id="@+id/check"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toStartOf="@id/menu_dot"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:src="@drawable/tabler_check"
            android:padding="8dp"
            android:layout_marginEnd="10dp"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        >
        <Button
            android:id="@+id/btnSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="trim"
            />
        <Button
            android:id="@+id/btnReset"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="reset"
            />
        <Button
            android:id="@+id/btnCut"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="cut"
            />
        <Button
            android:id="@+id/btnPaste"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="paste"
            />
        <Button
            android:id="@+id/btncopy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Copy"
            />
    </LinearLayout>
    <RelativeLayout
     android:layout_width="wrap_content" 
     android:layout_height="0px"
     android:layout_weight="8"
        android:layout_marginBottom="50dp"
        android:background="@drawable/bg_gradient_editor_audio"
        >

      <!--ImageView
       android:id="@+id/bkgnd"
       android:layout_width="fill_parent"
       android:layout_height="fill_parent"
       android:scaleType="centerCrop"
       android:src="@drawable/bkgnd"-->

      <com.gambi.quanglinh.djmixer.waveform.WaveformView
       android:id="@+id/waveform"
       android:layout_width="match_parent"
       android:layout_height="match_parent" />

      <com.gambi.quanglinh.djmixer.waveform.MarkerView
       android:id="@+id/startmarker"
       android:nextFocusDown="@+id/endmarker"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:src="@drawable/marker_left"
       android:contentDescription="@string/start_marker" />

      <com.gambi.quanglinh.djmixer.waveform.MarkerView
       android:id="@+id/endmarker"
       android:nextFocusUp="@+id/startmarker"
       android:nextFocusDown="@+id/info"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:src="@drawable/marker_right"
       android:contentDescription="@string/end_marker" />
        <TextView
            android:id="@+id/tvt_subtract"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="-"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:textSize="100sp"
            android:textColor="@color/white"
            android:paddingHorizontal="10dp"
            />
        <TextView
            android:id="@+id/tvt_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="+"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:textSize="100sp"
            android:textColor="@color/white"
            />
    </RelativeLayout>

    <TextView
     android:id="@+id/info"
     android:nextFocusUp="@+id/endmarker"
     android:nextFocusDown="@+id/play"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
     style="@style/AudioFileInfoOverlayText"
     android:gravity="center" />

    <LinearLayout
     style="@style/ToolbarBackground"
     android:layout_width="fill_parent" 
     android:layout_height="62dip"
     android:gravity="center" >
        <ImageButton
            android:id="@+id/skip_fw"
            android:layout_width="64dip"
            android:layout_height="52dip"
            android:layout_marginTop="6dip"
            android:layout_marginBottom="6dip"
            style="@android:style/MediaButton"
            android:contentDescription="@string/rewind"
            android:src="@drawable/skip_back" />
      <ImageButton
       android:id="@+id/rew"
       android:layout_width="64dip"
       android:layout_height="52dip"
       android:layout_marginTop="6dip"
       android:layout_marginBottom="6dip"
       style="@android:style/MediaButton"
       android:contentDescription="@string/rewind"
       android:src="@drawable/fast_back" />

      <ImageButton
       android:id="@+id/play"
       android:layout_width="71dip"
       android:layout_height="52dip"
       android:layout_marginTop="6dip"
       android:layout_marginBottom="6dip"
       style="@android:style/MediaButton"
       android:contentDescription="@string/play"
       android:src="@android:drawable/ic_media_play" />

      <ImageButton
       android:id="@+id/ffwd"
       android:layout_width="64dip"
       android:layout_height="52dip"
       android:layout_marginRight="5dip"
       android:layout_marginTop="6dip"
       android:layout_marginBottom="6dip"
       style="@android:style/MediaButton"
       android:contentDescription="@string/ffwd"
       android:src="@drawable/fast_foward" />
        <ImageButton
            android:id="@+id/skip_back"
            android:layout_width="64dip"
            android:layout_height="52dip"
            android:layout_marginTop="6dip"
            android:layout_marginBottom="6dip"
            style="@android:style/MediaButton"
            android:contentDescription="@string/rewind"
            android:src="@drawable/skip_fwd" />
    </LinearLayout>

    <LinearLayout style="@style/HorizontalDividerTop" />
    <LinearLayout style="@style/HorizontalDividerBottom" />

    <LinearLayout
     style="@style/ToolbarBackground"
     android:layout_width="fill_parent" 
     android:layout_height="62dip"
     android:gravity="center"
     android:orientation="horizontal">

      <TextView
       android:id="@+id/mark_start"
       android:text="@string/start_label"
       android:textColor="#ffffffff"
       android:textSize="14sp"
       android:textStyle="bold"
       android:labelFor="@+id/starttext"
       android:clickable="true"
       android:gravity="center"
       android:layout_width="wrap_content" 
       android:layout_height="31dip" />

      <EditText
       android:id="@+id/starttext"
       android:textSize="16sp"
       android:inputType="number|numberDecimal"
       android:layout_marginLeft="10dip"
       android:layout_marginRight="30dip"
       android:layout_width="70dip"
       android:layout_height="31dip"
       android:gravity="center" />

      <TextView
       android:id="@+id/mark_end"
       android:text="@string/end_label"
       android:textColor="#ffffffff"
       android:textSize="14sp"
       android:textStyle="bold"
       android:labelFor="@+id/endtext"
       android:clickable="true"
       android:gravity="center"
       android:layout_width="wrap_content" 
       android:layout_height="31dip" />

      <EditText
       android:id="@+id/endtext"
       android:textSize="16sp"
       android:inputType="number|numberDecimal"
       android:layout_width="70dip"
       android:layout_height="31dip"
       android:layout_marginLeft="10dip"
       android:gravity="center" />

    </LinearLayout>

</LinearLayout>
